# bt-message

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build-android.yml  build-windows.yml  release.yml
android/: AndroidManifest.xml  build.gradle  settings.gradle
qml/: main.qml
qml/components/: AppHeader.qml  DeviceDelegate.qml  FileTransferCard.qml  InputBar.qml  MessageBubble.qml
qml/pages/: ChatPage.qml  DeviceListPage.qml  SettingsPage.qml
qml/styles/: Theme.qml
src/: main.cpp
src/bluetooth/: androidpermissions.cpp  androidpermissions.h  btclient.cpp  btclient.h  btdevice.cpp  btdevice.h  btmanager.cpp  btmanager.h  btserver.cpp  btserver.h
src/models/: devicemodel.cpp  devicemodel.h  filetransfermodel.cpp  filetransfermodel.h  messagemodel.cpp  messagemodel.h  messagestore.cpp  messagestore.h
src/protocol/: filetransfermanager.cpp  filetransfermanager.h  messageprotocol.cpp  messageprotocol.h
